# cuda_project_template

./: CMakeLists.txt  README.md
cuda/: CMakeLists.txt
cuda/include/: cuda_add.h  cuda_double.h
cuda/src/: CudaVecDouble.cu  cuda_add.cu  cuda_double.cu
main/: CMakeLists.txt
main/include/: cuda_add_demo.h  cuda_double_demo.h
main/src/: main.cpp
scripts/: build_vs2019_win64_debug.bat
